--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=safe_route
-spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
-spring.datasource.username=rm553748
-spring.datasource.password=291096
+spring.profiles.active=local
+
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -20,11 +23,26 @@ management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 
 # RabbitMQ Configuration
-spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
-spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
-spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
-spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
+#spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+#spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+#spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
+#spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
+#spring.rabbitmq.listener.simple.auto-startup=false
+#spring.rabbitmq.listener.direct.auto-startup=false
+#spring.rabbitmq.listener.auto-startup=false
+
+
 
 # SpringAI
 spring.ai.ollama.chat.model=llama3
 spring.ai.ollama.base-url=http://ollama:11434
+
+
+# OAuth2 Google Login
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
