--- a/pom.xml
+++ b/pom.xml
@@ -115,8 +115,18 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
 		</dependency>
-
-
+		<!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j-ollama -->
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j-ollama</artifactId>
+			<version>0.34.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j -->
+		<dependency>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j</artifactId>
+			<version>0.34.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
