FEAT: implementing spring AI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,20 @@ services:
       - "8080:8080"
     depends_on:
       - rabbitmq
+      - ollama
+    env_file:
+      - .env
     environment:
-      SPRING_PROFILES_ACTIVE: prod
+      SPRING_PROFILES_ACTIVE: default
       SPRING_RABBITMQ_HOST: rabbitmq
       SPRING_RABBITMQ_PORT: 5672
       SPRING_RABBITMQ_USERNAME: guest
       SPRING_RABBITMQ_PASSWORD: guest
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      OLLAMA_BASE_URL: http://ollama:11434
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -26,3 +34,16 @@ services:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
     restart: unless-stopped
+
+  ollama:
+    image: ollama/ollama
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama:/root/.ollama
+      - ./start-ollama.sh:/start-ollama.sh
+    restart: unless-stopped
+
+volumes:
+  ollama:
