--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=safe_route
-spring.profiles.active=local
-
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+# DATABASE CONFIGURATION -> put the following lines in application-local.properties
+spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
@@ -34,11 +33,13 @@ management.endpoints.web.exposure.include=*
 
 
 # SpringAI
-spring.ai.ollama.chat.model=llama3
-spring.ai.ollama.base-url=http://ollama:11434
-
+spring.ai.ollama.chat.model=tinyllama
+spring.ai.ollama.base-url=${OLLAMA_BASE_URL:http://localhost:11434}
 
 # OAuth2 Google Login
+# The commented lines below are for local development. Find your client ID and secret at https://console.cloud.google.com/apis/credentials
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
