--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-amqp</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -104,7 +104,6 @@
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.amqp</groupId>-->
 <!--			<artifactId>spring-rabbit-test</artifactId>-->
-<!--			<scope>test</scope>-->
 <!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -127,6 +126,13 @@
 			<artifactId>langchain4j</artifactId>
 			<version>0.34.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
