--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.messages.basename=messages
+spring.web.locale-resolver=fixed
 spring.web.locale=pt_BR
 
 
@@ -22,13 +24,13 @@ management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 
 # RabbitMQ Configuration
-#spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
-#spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
-#spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
-#spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
-#spring.rabbitmq.listener.simple.auto-startup=false
-#spring.rabbitmq.listener.direct.auto-startup=false
-#spring.rabbitmq.listener.auto-startup=false
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
+spring.rabbitmq.listener.simple.auto-startup=false
+spring.rabbitmq.listener.direct.auto-startup=false
+spring.rabbitmq.listener.auto-startup=false
 
 
 
@@ -47,3 +49,6 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+
+
