--- a/example.env
+++ b/example.env
@@ -5,3 +5,5 @@ DB_PASSWORD=sua_senha_oracle
 # === Google OAuth2 ===
 GOOGLE_CLIENT_ID=seu_client_id_google
 GOOGLE_CLIENT_SECRET=sua_client_secret_google
+
+OLLAMA_BASE_URL=http://ollama:11434
