--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.application.name=safe_route
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
@@ -10,7 +17,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.messages.basename=messages
 spring.web.locale-resolver=fixed
 spring.web.locale=pt_BR
-
 
 # Thymeleaf Configuration
 spring.thymeleaf.encoding=UTF-8
